* Minor update: (210502)
- Re-enable sorting operations (broke due to mods in 210413).

* Minor update: (210413)
- Add 'backup', 'restore' and 'reset' operations for custom lists.

* Minor update: (210328)
- Open sorting log in a new QTS window instead of a new page.

* Minor update: (210323)
- Added [V4LDrivers, RltkWifi2b, RltkWifi1c, Erlang, QuestDB, Dolt] to the ALPHA list.

* Minor update: (201228)
- Added [PostgreSQLPremium13] to the ALPHA list.
- include fix to enable App Center icon in QTS 4.5.1.

* Minor update: (201206)
- Added [Apache80] to the ALPHA list.

* Minor update: (201116)
- Added [QKVM] to the ALPHA list.

* Minor update: (201106)
- Added [QSickChill3, PyMedusa3] to the OMEGA list.
- Create a symlink to main log in /var/log/
- Code: minor fixes for better readability.

* Minor update: (200903)
- Added [Deluge-server, Deluge-web, RadarrDotNet, Mylar3, LidarrDotNET] to the OMEGA list.

* Minor update: (200812)
- Added [HandBrake_CLI, Komga] to the ALPHA list.
- Added [QSabNZBd3] to the OMEGA list.

* Minor update: (200811)
- Added [OTransmission, OSickGear, LazyLibrarian] to the OMEGA list.
- Moved the malware detection packages from loading first to (almost) last. These are not "live" scanners, so makes more sense to load them after everything else.

* Minor update: (200724)
- Added [AcronisK, JRE_ARM, QJDK14, CACert, Teamspeak3] to the ALPHA list.
- Added [TransmissionWC, Ombi4] to the OMEGA list.

* Minor update: (200610)
- Added [NMAP, Qemu] to the ALPHA list.
- Added [SABnzbd, QTransmission3] to the OMEGA list.
- Code: make constants readonly, remove a few extra characters.

* Minor update: (200418)
- Added [QMultimedia] to the ALPHA list.
- Code: use only QTS binaries.

* Minor update: (191222)
- Added [ELFx31, Apache74] to the ALPHA list.

* Minor update: (190929)
- Added [USBSerialdrivers, TomCat9, postgresql, OpenPlexTheatre] to the ALPHA list.
- Disabled [AirSonic, QMadSonic, QSubSonic] in the ALPHA list.