@@ -1,5 +1,9 @@
 * Minor update: (210502)
-- Re-enable sorting operations (broke due to mods in 210413).
+- Re-enable sorting for OMEGA packages (broken due to mods in 210413).
+- Added [QJDK16] to the ALPHA list.
+
+* Minor update: (210502)
+- Re-enable sorting operations (broken due to mods in 210413).
 
 * Minor update: (210413)
 - Add 'backup', 'restore' and 'reset' operations for custom lists.
